list options hover effect

--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@
         <ul class="lists">
             <li class="list">
                 <span class="list__name">Personal</span>
-                <svg class="list__options-cta" viewBox="0 0 6 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <circle cx="2.74725" cy="2.74725" r="2.74725" fill="black" fill-opacity="0.6"/>
-                    <circle cx="2.74725" cy="10" r="2.74725" fill="black" fill-opacity="0.6"/>
-                    <circle cx="2.74725" cy="17.2527" r="2.74725" fill="black" fill-opacity="0.6"/>
-                </svg>
+                <span class="list__options-cta">
+                    <svg  class="list__options-cta__svg" viewBox="0 0 6 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <circle cx="2.74725" cy="2.74725" r="2.74725" fill="black" fill-opacity="0.6"/>
+                        <circle cx="2.74725" cy="10" r="2.74725" fill="black" fill-opacity="0.6"/>
+                        <circle cx="2.74725" cy="17.2527" r="2.74725" fill="black" fill-opacity="0.6"/>
+                    </svg>
+                </span>
                 <ul class="list__options">
                     <li class="list__option">
                         <span class="list__option__name">Modify</span>
@@ -43,27 +45,33 @@
             </li>
             <li class="list">
                 <span class="list__name">Groceries</span>
-                <svg class="list__options-cta" viewBox="0 0 6 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <circle cx="2.74725" cy="2.74725" r="2.74725" fill="black" fill-opacity="0.6"/>
-                    <circle cx="2.74725" cy="10" r="2.74725" fill="black" fill-opacity="0.6"/>
-                    <circle cx="2.74725" cy="17.2527" r="2.74725" fill="black" fill-opacity="0.6"/>
-                </svg>
+                <span class="list__options-cta">
+                    <svg  class="list__options-cta__svg" viewBox="0 0 6 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <circle cx="2.74725" cy="2.74725" r="2.74725" fill="black" fill-opacity="0.6"/>
+                        <circle cx="2.74725" cy="10" r="2.74725" fill="black" fill-opacity="0.6"/>
+                        <circle cx="2.74725" cy="17.2527" r="2.74725" fill="black" fill-opacity="0.6"/>
+                    </svg>
+                </span>
             </li>
             <li class="list">
                 <span class="list__name">College</span>
-                <svg class="list__options-cta" viewBox="0 0 6 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <circle cx="2.74725" cy="2.74725" r="2.74725" fill="black" fill-opacity="0.6"/>
-                    <circle cx="2.74725" cy="10" r="2.74725" fill="black" fill-opacity="0.6"/>
-                    <circle cx="2.74725" cy="17.2527" r="2.74725" fill="black" fill-opacity="0.6"/>
-                </svg>
+                <span class="list__options-cta">
+                    <svg  class="list__options-cta__svg" viewBox="0 0 6 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <circle cx="2.74725" cy="2.74725" r="2.74725" fill="black" fill-opacity="0.6"/>
+                        <circle cx="2.74725" cy="10" r="2.74725" fill="black" fill-opacity="0.6"/>
+                        <circle cx="2.74725" cy="17.2527" r="2.74725" fill="black" fill-opacity="0.6"/>
+                    </svg>
+                </span>
             </li>
             <li class="list">
                 <span class="list__name">Payments</span>
-                <svg class="list__options-cta" viewBox="0 0 6 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <circle cx="2.74725" cy="2.74725" r="2.74725" fill="black" fill-opacity="0.6"/>
-                    <circle cx="2.74725" cy="10" r="2.74725" fill="black" fill-opacity="0.6"/>
-                    <circle cx="2.74725" cy="17.2527" r="2.74725" fill="black" fill-opacity="0.6"/>
-                </svg>
+                <span class="list__options-cta">
+                    <svg  class="list__options-cta__svg" viewBox="0 0 6 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <circle cx="2.74725" cy="2.74725" r="2.74725" fill="black" fill-opacity="0.6"/>
+                        <circle cx="2.74725" cy="10" r="2.74725" fill="black" fill-opacity="0.6"/>
+                        <circle cx="2.74725" cy="17.2527" r="2.74725" fill="black" fill-opacity="0.6"/>
+                    </svg>
+                </span>
             </li>
         </ul>
       </div>
