added tab arrow indicator

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <!-- <li class="list list--active list--options-visible"> -->
             <li tabindex="0" class="list list--active">
                 <span class="list__name">Personal</span>
-                <span class="list__options-cta">
+                <span tabindex="0" class="list__options-cta">
                     <svg  class="list__options-cta__svg" viewBox="0 0 6 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <circle cx="2.74725" cy="2.74725" r="2.74725" fill="black" fill-opacity="0.6"/>
                         <circle cx="2.74725" cy="10" r="2.74725" fill="black" fill-opacity="0.6"/>
@@ -46,7 +46,7 @@
             </li>
             <li tabindex="0" class="list">
                 <span class="list__name">Groceries</span>
-                <span class="list__options-cta">
+                <span tabindex="0" class="list__options-cta">
                     <svg  class="list__options-cta__svg" viewBox="0 0 6 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <circle cx="2.74725" cy="2.74725" r="2.74725" fill="black" fill-opacity="0.6"/>
                         <circle cx="2.74725" cy="10" r="2.74725" fill="black" fill-opacity="0.6"/>
@@ -71,7 +71,7 @@
             </li>
             <li tabindex="0" class="list">
                 <span class="list__name">College</span>
-                <span class="list__options-cta">
+                <span tabindex="0" class="list__options-cta">
                     <svg  class="list__options-cta__svg" viewBox="0 0 6 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <circle cx="2.74725" cy="2.74725" r="2.74725" fill="black" fill-opacity="0.6"/>
                         <circle cx="2.74725" cy="10" r="2.74725" fill="black" fill-opacity="0.6"/>
@@ -96,7 +96,7 @@
             </li>
             <li tabindex="0" class="list">
                 <span class="list__name">Payments</span>
-                <span class="list__options-cta">
+                <span tabindex="0" class="list__options-cta">
                     <svg  class="list__options-cta__svg" viewBox="0 0 6 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <circle cx="2.74725" cy="2.74725" r="2.74725" fill="black" fill-opacity="0.6"/>
                         <circle cx="2.74725" cy="10" r="2.74725" fill="black" fill-opacity="0.6"/>
@@ -133,7 +133,7 @@
         <ul class="items">
           <li class="item">
             <div class="item__info">
-                <input class="item__input" type="checkbox" id="item_1" />
+                <input tabindex="0" class="item__input" type="checkbox" id="item_1" />
                 <label class="item__label" for="item_1">Get a new helmet</label>
             </div>
             <span class="item__options-cta">
@@ -162,7 +162,7 @@
           <!-- <li class="item item--completed item--options-visible"> -->
             <li class="item">
             <div class="item__info">
-                <input class="item__input" type="checkbox" id="item_2" />
+                <input tabindex="0" class="item__input" type="checkbox" id="item_2" />
                 <label class="item__label" for="item_2">Purchase Milk & Corn Flakes</label>
             </div>
             <span class="item__options-cta">
@@ -190,7 +190,7 @@
           </li>
           <li class="item">            
             <div class="item__info">
-                <input class="item__input" type="checkbox" id="item_3" />
+                <input tabindex="0" class="item__input" type="checkbox" id="item_3" />
                 <label class="item__label" for="item_3">Complete Assignments</label>
             </div>
             <span class="item__options-cta">
