small mobile navbar changes

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
                 </svg>
             </div>
         </div>
-      <div class="nav-container nav-container--hidden">
+      <div class="nav-container nav-container--hidden-mobile">
         <ul class="lists">
         </ul>
         <svg tabindex="0" class="list-add" viewBox="0 0 36 36" xmlns="http://www.w3.org/2000/svg">
