--- a/src/index.html
+++ b/src/index.html
@@ -51,5 +51,90 @@
         <ul class="items"></ul>
       </div>
     </main>
+    <footer class="credits credits--hidden">
+      <div tabindex="0" class="credits__title">credits</div>
+      <ul class="credits__info">
+        <li class="credits__info__instance">
+          Design adapted and added on the original by
+          <a
+            tabindex="-1"
+            class="credits-link"
+            title="original design"
+            target="_blank"
+            href="https://www.figma.com/community/file/1088313494448952121"
+            >Suhail Ibn Nisar</a
+          >
+          licensed under
+          <a
+            tabindex="-1"
+            class="credits-link"
+            title="copyright license"
+            target="_blank"
+            href="https://creativecommons.org/licenses/by/4.0/"
+            >CC BY 4.0</a
+          >
+        </li>
+        <li class="credits__info__instance">
+          Happy icon created by
+          <a
+            tabindex="-1"
+            href="https://www.flaticon.com/free-icons/happy"
+            title="happy icons"
+            target="_blank"
+            class="credits-link"
+          >
+            Wahyu Adam - Flaticon
+          </a>
+        </li>
+        <li class="credits__info__instance">
+          Arrow icon created by
+          <a
+            tabindex="-1"
+            href="https://www.flaticon.com/free-icons/arrow"
+            target="_blank"
+            title="arrow icons"
+            class="credits-link"
+          >
+            Handicon - Flaticon
+          </a>
+        </li>
+        <li class="credits__info__instance">
+          Add icon created by
+          <a
+            tabindex="-1"
+            href="https://www.flaticon.com/free-icons/add"
+            target="_blank"
+            title="add icons"
+            class="credits-link"
+          >
+            Ilham Fitrotul Hayat - Flaticon
+          </a>
+        </li>
+        <li class="credits__info__instance">
+          Edit icon created by
+          <a
+            tabindex="-1"
+            href="https://www.flaticon.com/free-icons/edit"
+            target="_blank"
+            title="edit icons"
+            class="credits-link"
+          >
+            alkhalifi design - Flaticon
+          </a>
+        </li>
+        <li class="credits__info__instance">
+          Menu icon created by
+          <a
+            tabindex="-1"
+            href="https://www.flaticon.com/free-icons/menu"
+            target="_blank"
+            title="menu icons"
+            class="credits-link"
+          >
+            ariefstudio - Flaticon
+          </a>
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
