no lists/items message

--- a/src/index.html
+++ b/src/index.html
@@ -43,13 +43,7 @@
             </svg>
         </div>
       </div>
-      <div class="content-container">
-        <header class="content-header">
-            <span class="active-list-title">Personal list</span>
-            <button tabindex="0" class="item-add">New item +</button>
-          </header>
-        <ul class="items"></ul>
-      </div>
+      <div class="content-container"></div>
     </main>
     <footer class="credits credits--hidden">
       <div tabindex="0" class="credits__title">credits</div>
