--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,17 @@
     <script defer type="module" src="./scripts/controller.js"></script>
   </head>
   <body>
+    <div class="hidden-container">
+      <span tabindex="0" href="#" class="hidden-container__link">Skip to items</span>
+      <div class="instructions">
+        <img class="instructions__img" src="./assets/enter.png" alt="Enter key" />
+        <span>Action key</span>
+      </div>
+      <div class="instructions">
+        <img class="instructions__img" src="./assets/escape.png" alt="Enter key" />
+        <span>Option key</span>
+      </div>
+    </div>
     <!-- prettier-ignore-->
     <main class="main-container">
         <div class="mobile-aside">
