--- a/src/index.html
+++ b/src/index.html
@@ -139,6 +139,30 @@
             ariefstudio - Flaticon
           </a>
         </li>
+        <li class="credits__info__instance">
+          Enter/Esc key icons created by
+          <a
+            tabindex="-1"
+            href="https://www.flaticon.com/free-icons/escape"
+            title="escape icons"
+            target="_blank"
+            class="credits-link"
+          >
+            Freepik - Flaticon
+          </a>
+        </li>
+        <li class="credits__info__instance">
+          Alert icon created by
+          <a
+            tabindex="-1"
+            href="https://www.flaticon.com/free-icons/alert"
+            title="alert icons"
+            target="_blank"
+            class="credits-link"
+          >
+            Freepik - Flaticon
+          </a>
+        </li>
       </ul>
     </footer>
   </body>
